Fixed layout issues, 'list items' and 'about' clashed.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -14,13 +14,12 @@
 h3 {
   font-size: 30px;
   font-weight: bold;
-
 }
 
 ul {
   position: relative;
   float: right;
-  padding-right: 200px;
+  padding-right: 100px;
   padding-top: 30px;
 }
 
